fix gallery slider on mobile #2

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1023,7 +1023,7 @@ top: 15px
     width: 180px !important;
 }
 .gallery-3{
-    width: 260px !important;
+    width: 240px !important;
 }
 .gallery-4{
     width: 260px !important;
